elasticsearch-sts.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: esnode
  labels:
    app: es-cluster
spec:
  serviceName: es-cluster-node
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: es-cluster
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: elasticsearch
#          resources:
#            requests:
#              memory: 256Mi
#              cpu: 1000m
#            limits:
#              memory: 512Mi
#              cpu: 100m
          securityContext:
            privileged: true
            runAsUser: 1000
            capabilities:
              add:
                - IPC_LOCK
                - SYS_RESOURCE
          image: harbor.yoho8.com/stack/elasticsearch-6.4.2:v1
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /_cluster/health?local=true
              port: 9200
            initialDelaySeconds: 5
          ports:
            - containerPort: 9200
              name: es-http
            - containerPort: 9300
              name: es-transport
          volumeMounts:
            - name: es-data
              mountPath: /usr/share/elasticsearch/data
            - name: elasticsearch-config
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
            - name: synonyms
              mountPath: /usr/share/elasticsearch/plugins/analysis-ik/config/analysis/synonyms.txt
              subPath: synonyms.txt
      volumes:
        - name: elasticsearch-config
          configMap:
            name: es-config
        - name: synonyms
          configMap: 
            name: synonyms
      dnsConfig:
        nameservers:
        - 192.168.124.25
      imagePullSecrets:
      - name: harbor
#        - name: es-data
#          emptyDir: {}
            #items:
            #  - key: elasticsearch.yml
            #    path: elasticsearch.yml
  volumeClaimTemplates:
    - metadata:
        name: es-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
        storageClassName: es
