elasticsearch-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: es-cluster-node
spec:
  clusterIP: None
  selector:
    app: es-cluster
  ports:
  - name: tcp
    port: 9300
    protocol: TCP
  - name: http
    port: 9200
    protocol: TCP

---

# cluster ip
apiVersion: v1
kind: Service
metadata:
  name: es-cluster-external
  namespace: default
spec:
  selector:
    app: es-cluster
  clusterIP: 10.1.0.107
  type: NodePort
  ports:
  - name: http
    port: 9200
    targetPort: 9200
  - name: tcp
    port: 9300
    targetPort: 9300
    #nodePort: 32200
