elasticsearch-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: es-cluster-node
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "flase"
spec:
  rules:
    - host: es.llm.com
      http:
        paths:
        - path: /
          backend:
            serviceName: es-cluster-node
            servicePort: 9200
